; ModuleID = '/home/carl/AnghaBench/postgres/contrib/intarray/extr__int_bool.c_execconsistent.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/intarray/extr__int_bool.c_execconsistent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64 }
%struct.TYPE_6__ = type { i64, i64 }

@checkcondition_arr = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @execconsistent(%struct.TYPE_5__* %0, i32* %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_6__, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32*, i32** %5, align 8
  %9 = call i32 @CHECKARRVALID(i32* %8)
  %10 = load i32*, i32** %5, align 8
  %11 = call i64 @ARRPTR(i32* %10)
  %12 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %7, i32 0, i32 0
  store i64 %11, i64* %12, align 8
  %13 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %7, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i32*, i32** %5, align 8
  %16 = call i64 @ARRNELEMS(i32* %15)
  %17 = add nsw i64 %14, %16
  %18 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %7, i32 0, i32 1
  store i64 %17, i64* %18, align 8
  %19 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %20 = call i64 @GETQUERY(%struct.TYPE_5__* %19)
  %21 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = add nsw i64 %20, %23
  %25 = sub nsw i64 %24, 1
  %26 = bitcast %struct.TYPE_6__* %7 to i8*
  %27 = load i32, i32* %6, align 4
  %28 = load i32, i32* @checkcondition_arr, align 4
  %29 = call i32 @execute(i64 %25, i8* %26, i32 %27, i32 %28)
  ret i32 %29
}

declare dso_local i32 @CHECKARRVALID(i32*) #1

declare dso_local i64 @ARRPTR(i32*) #1

declare dso_local i64 @ARRNELEMS(i32*) #1

declare dso_local i32 @execute(i64, i8*, i32, i32) #1

declare dso_local i64 @GETQUERY(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
